Fixed issues caused by feature backport